--- a/layouts/partials/core/head.html
+++ b/layouts/partials/core/head.html
@@ -1,3 +1,4 @@
+{{ $baseUrl := .Site.BaseURL }}
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,6 +11,15 @@
     {{ end }}
     {{ .Hugo.Generator }}
     <meta name="generation-date" content="{{ now }}">
+    {{ with .Site.Params.Social.twitter }}
+    <meta name="twitter:site" content="{{ . }}">
+    {{ end }}
+    {{ with or .Params.image .Site.Params.Header.image }}
+    <meta name="og:type" content="summary_large_image">
+    <meta name="og:image" content="{{ $baseUrl }}{{ . }}">
+    {{ end }}
+    <meta name="og:description" content="{{ .Summary }}">
+    <meta name="og:title" content="{{ .Title }}">
     <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
     <link rel="shortcut icon" href="{{ .Site.BaseURL }}img/favicon.ico">
     <link rel="icon" href="{{ .Site.BaseURL }}img/favicon.ico">
