--- a/layouts/partials/post/page-item.html
+++ b/layouts/partials/post/page-item.html
@@ -1,14 +1,18 @@
 {{ $baseUrl := .Site.BaseURL }}
 <div class="page-item-container">
-    {{ with .Params.image }}
+    {{ if .Params.images }}
+    <a href="{{ .Permalink }}">
+    {{ range .Params.images }}
         <img src="{{ $baseUrl }}{{ . }}" class="page-item-image"></img>
     {{ end }}
+    {{ end }}
+    </a>
     <div class="page-item-content">
         <header>
             {{ if not .Date.IsZero }}
                 <time class="page-item-date">{{ .Date.Format "Mon Jan 02, 2006" }}</time>
             {{ end }}
-            <h2 class="page-item-title">{{ .Title }}</h2>
+	    <h2 class="page-item-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
         </header>
         <p class="page-item-summary">{{ .Summary }}</p>
         <a href="{{ .Permalink }}" class="page-item-btn {{ if .Params.redirect }}page-item-btn-red{{ end }}">
